2007-06-26  Akim Demaille  <demaille@gostai.com>

	Merge command and statement into stmt
	* src/parser/bison/ugrammar.y (statement, command): Merge into...
	(stmt): this.
	(commands): Rename as...
	(stmts): this.
	(TOK_EXPRBLOCK, EXPRBLOCK): Remove, unused.

2007-06-26  Akim Demaille  <demaille@gostai.com>

	merge -r 1187:1189 https://svn.gostai.com/svn/kernel1/trunk

	2007-06-26  Akim Demaille  <demaille@gostai.com>
	Remove dead token
	* src/parser/bison/ugrammar.y (TOK_CMDBLOCK): Remove.

2007-06-26  Akim Demaille  <demaille@gostai.com>

	merge -r 1149:1187 https://svn.gostai.com/svn/kernel1/trunk

	2007-06-26  Akim Demaille  <demaille@gostai.com>
	merge -r 1157:1186 https://svn.gostai.com/svn/kernel1/branches/1.0

	2007-06-26  Akim Demaille  <demaille@gostai.com>
	* src/parser/bison/ugrammar.y (variables): Rename as...
	(names): this.

	2007-06-22  Akim Demaille  <demaille@gostai.com>
	purevariable|variable -> name
	* src/parser/bison/ugrammar.y (variable, purevariable): Fuse
	into...
	(name): this.

	2007-06-22  Akim Demaille  <demaille@gostai.com>
	lvalue
	* src/parser/bison/ugrammar.y (lvalue): New.
	Use where appropriate (assignments).
	(rvalue): "static" belongs to here.
	(variable): Adjust.

	2007-06-22  Akim Demaille  <demaille@gostai.com>
	* src/parser/bison/ugrammar.y (derive): New.
	(ravlue): New.
	(variable): Adjust.
	* src/parser/bison/flex-lexer.hh, src/parser/uparser.cc,
	* src/parser/uparser.hh: Adjust includes.

	2007-06-22  Akim Demaille  <demaille@gostai.com>
	class-definition.chk
	* src/parser/bison/ugrammar.y: Comment a weakness.
	* src/uexpression.cc: Formatting changes.

	2007-06-22  Akim Demaille  <demaille@gostai.com>
	Simplify class defs
	* src/parser/bison/ugrammar.y (formal_arguments): New.
	(class_declaration): Use it to factor.

	2007-06-22  Akim Demaille  <demaille@gostai.com>
	Fix list of identifiers handling
	* src/parser/bison/ugrammar.y (var.opt, identifiers.1): New.
	(identifiers): Use them.
